checkbox (0.16.6) UNRELEASED; urgency=low

  [ Brendan Donegan ]
  * plugins/launchpad_report.py - Don't include attachments which have a status
    of 'unsupported' (LP: #1196531)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 28 Jun 2013 15:02:58 +0100

checkbox (0.16.5) saucy; urgency=low

  [ Brendan Donegan ]
  * scripts/xml_sanitizer, jobs/info.txt.in - pipe output from udevadm
    through new xml_sanitizer script which removes characters which are
    invalid in XML, so that it doesn't cause trouble (LP: #1192093)

  [ Jeff Marcom ]
  * scripts/virtualization: fixed issue introduced in last patch that
    caused the kvm test to not run at all. Changed file permission lvl
    on created temporary directory. Fixed issue where test log was being
    deleted along with temporary directory(LP: #1192979)

  [ Daniel Manrique ]
  * scripts/audio_test: Improved peak detection algorithm and made the
    audio_test slighly more sensitive (LP: #1070776). Rewrote script to
    use/require Python 3 and gstreamer 1.0. Updated job requirements and
    checkbox dependencies accordingly. 

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 28 Jun 2013 15:02:37 +0100

checkbox (0.16.4) saucy; urgency=low

  [ Jeff Lane ]
  * scripts/virtualization: script no longer fails when trying to cast an
    empty timeout setting in config file to int(). Added additional error
    handling. (LP: #1186259)
  * jobs/stress.txt.in: added dependencies on single cycle tests to the 30
    cycle S3 and S4 test to avoid unnecessary rebooting by tester on expected
    failures. (LP: #1188284)
  * scripts/fwts_test, scripts/sleep_test: Tests now use a more reliabe marker
    to determine when the system completed resume. sleep_test output cleaned up
    to match fwts_test output and not break sleep_time_check (LP: #1188221)

  [ Brendan Donegan ]
  * jobs/optical.txt.in - Added VERIFICATION section for cdrom-write job so that