@@ -4,7 +4,9 @@ import os
 import sys
 
 from checkbox.parsers.dmidecode import DmidecodeParser
+from checkbox.parsers.lshwjson import LshwJsonParser
 from checkbox.parsers.meminfo import MeminfoParser
+from subprocess import check_output, PIPE
 
 THRESHOLD = 10
 
@@ -21,11 +23,25 @@ class DmiResult:
             except ValueError:
                 pass
 
-def get_installed_memory_size():
-    dmi = DmidecodeParser(os.popen('dmidecode'))
-    result = DmiResult()
+class LshwJsonResult:
 
+    total_size = 0
+
+    def addHardware(self, hardware):
+        if hardware['id'] == 'memory':
+            self.total_size += int(hardware['size'])
+
+def get_installed_memory_size():
+    dmi = DmidecodeParser(os.popen('dmidecobe'))
+    result = DmiResult()
     dmi.run(result)
+
+    if result.total_size == 0:
+        lshw = LshwJsonParser(check_output(['lshw','-json'],
+                              universal_newlines=True,
+                              stderr=PIPE))
+        result = LshwJsonResult()
+        lshw.run(result)
 
     return result.total_size
 
@@ -57,7 +73,7 @@ def main():
     except ZeroDivisionError:
         print("Results:")
         print("\t/proc/meminfo reports:\t%s kB" % visible_memory, file=sys.stderr)
-        print("\tdmi reports:\t%s kB" % installed_memory, file=sys.stderr)
+        print("\tdmi/lshw reports:\t%s kB" % installed_memory, file=sys.stderr)
         print("\nFAIL: Either dmi or /proc/meminfo returned a memory size of 0 kB", file=sys.stderr)
         return 1
     
